## Makefile.am -- Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libttspico.la
libttspico_la_SOURCES = \
	picoacph.c \
	picoapi.c \
	picobase.c \
	picocep.c \
	picoctrl.c \
	picodata.c \
	picodbg.c \
	picoextapi.c \
	picofftsg.c \
	picokdbg.c \
	picokdt.c \
	picokfst.c \
	picoklex.c \
	picoknow.c \
	picokpdf.c \
	picokpr.c \
	picoktab.c \
	picoos.c \
	picopal.c \
	picopam.c \
	picopr.c \
	picorsrc.c \
	picosa.c \
	picosig.c \
	picosig2.c \
	picospho.c \
	picotok.c \
	picotrns.c \
	picowa.c

libttspico_ladir = $(includedir)
libttspico_la_HEADERS = \
	picoacph.h \
	picoapid.h \
	picoapi.h \
	picobase.h \
	picocep.h \
	picoctrl.h \
	picodata.h \
	picodbg.h \
	picodefs.h \
	picodsp.h \
	picoextapi.h \
	picofftsg.h \
	picokdbg.h \
	picokdt.h \
	picokfst.h \
	picoklex.h \
	picoknow.h \
	picokpdf.h \
	picokpr.h \
	picoktab.h \
	picoos.h \
	picopal.h \
	picopam.h \
	picopltf.h \
	picopr.h \
	picorsrc.h \
	picosa.h \
	picosig2.h \
	picosig.h \
	picospho.h \
	picotok.h \
	picotrns.h \
	picowa.h

picolangdir = ./lang


